fix(badge): vertical alignment of component

--- a/components/badge/index.css
+++ b/components/badge/index.css
@@ -138,6 +138,7 @@ governing permissions and limitations under the License.
   inline-size: auto;
 
   display: inline-flex;
+  vertical-align: middle;
   position: relative;
 
   cursor: default;
